# tars

./: .gitignore  README.md  pyproject.toml
tars/: __init__.py  __main__.py  app.py  helpers.py  scanner.py  theme.py
tars/modals/: __init__.py  confirm.py  delegate.py  fullscreen.py  prompt.py  rename.py  resume.py  scratchpad.py  session_picker.py  spawn.py
tars/scanner/: __init__.py  actions.py  models.py  sessions.py  tmux.py  transcripts.py  utils.py
tars/screens/: __init__.py  delegation.py  detail.py  home.py
