[project]
name = "tars"
version = "0.2.0"
description = "Terminal Agent Runtime Scanner — monitor, interact with, and orchestrate Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
tars = "tars.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
